# DebateBet

./: README.md  api_pricing.json  config.py  debate_prompts.py  debate_prompts.yaml  elo_count.py  estimate_debate_cost.py  fix_debate_test.py  judge_models.json  load_topics.py  main.py  models.py  pyproject.toml  run_debate.py  stage_one.py  test_topic.json  topic.py  topics.json  utils.py
debate_test_judges/: deepseek_deepseek-chat_meta-llama_llama-3.3-70b-instruct.json  deepseek_deepseek-r1-distill-llama-70b_deepseek_deepseek-chat.json  deepseek_deepseek-r1-distill-llama-70b_deepseek_deepseek-r1-distill-qwen-32b.json  deepseek_deepseek-r1-distill-qwen-32b_deepseek_deepseek-chat.json  deepseek_deepseek-r1-distill-qwen-32b_openai_gpt-4o-mini.json  meta-llama_llama-3.3-70b-instruct_deepseek_deepseek-r1-distill-qwen-32b.json  openai_gpt-4o-mini_deepseek_deepseek-r1-distill-llama-70b.json  openai_gpt-4o-mini_meta-llama_llama-3.3-70b-instruct.json
